# model-exploration-v2

./: .gitignore  README.md  pyproject.toml
notebooks/: data-exploration-no-removal.ipynb  data-exploration-outlier-removal.ipynb  data-exploration.ipynb  data-transformation.ipynb  model_simulation.ipynb  model_simulation_v2.ipynb  model_simulation_v3.ipynb  sample-v2-analysis.ipynb  sample-v3-analysis.ipynb  valuated_stats_to_list.py
notebooks/models/2024-10-12_10-22-30/: summary.md
notebooks/models/2024-10-12_19-54-46/: summary.md
notebooks/models/2024-10-12_21-18-42/: summary.md
notebooks/models/2024-10-12_21-48-16/: summary.md
